--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --max-warnings=0",
+    "lint": "next lint ./src --max-warnings=0",
     "prepare": "husky install",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "yarn test --watch"
   },
   "dependencies": {
     "next": "12.1.5",
@@ -17,6 +18,8 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.16.7",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.30",
     "@types/react": "^18.0.8",
@@ -36,6 +39,6 @@
     "typescript": "^4.6.4"
   },
   "lint-staged": {
-    "src/**/*": "yarn lint --fix"
+    "src/**/*": ["yarn lint --fix", "yarn test --bail"]
   }
 }
