--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint ./src --max-warnings=0",
+    "lint": "eslint src --max-warnings=0",
     "prepare": "husky install",
     "test": "jest",
     "test:watch": "yarn test --watch"
@@ -39,6 +39,6 @@
     "typescript": "^4.6.4"
   },
   "lint-staged": {
-    "src/**/*": ["yarn lint --fix", "yarn test --bail"]
+    "src/**/*": ["yarn lint --fix", "yarn test --findRelatedTests --bail"]
   }
 }
