--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "next": "12.1.5",
+    "next-pwa": "^5.5.2",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
@@ -39,6 +40,9 @@
     "typescript": "^4.6.4"
   },
   "lint-staged": {
-    "src/**/*": ["yarn lint --fix", "yarn test --findRelatedTests --passWithNoTests --bail"]
+    "src/**/*": [
+      "yarn lint --fix",
+      "yarn test --findRelatedTests --passWithNoTests --bail"
+    ]
   }
 }
