--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
     "husky": "^7.0.4",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^28.0.3",
     "jest-environment-jsdom": "^28.0.2",
     "lint-staged": "^12.4.1",
@@ -40,7 +41,7 @@
     "typescript": "^4.6.4"
   },
   "lint-staged": {
-    "src/**/*": [
+    "src/**/*.ts(x)": [
       "yarn lint --fix",
       "yarn test --findRelatedTests --passWithNoTests --bail"
     ]
