--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "next-boilerplate",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,7 +8,7 @@
     "lint": "eslint src --max-warnings=0",
     "prepare": "husky install",
     "test": "jest",
-    "test:watch": "yarn test --watch"
+    "test:watch": "npm run test --watch"
   },
   "dependencies": {
     "next": "12.1.5",
@@ -43,8 +42,8 @@
   },
   "lint-staged": {
     "src/**/*.ts(x)": [
-      "yarn lint --fix",
-      "yarn test --findRelatedTests --passWithNoTests --bail"
+      "npm run lint --fix",
+      "npm run test --findRelatedTests --passWithNoTests --bail"
     ]
   }
 }
