--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-boilerplate",
-  "version": "1.0.0",
+  "version": "1.1.1",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,10 +11,10 @@
     "test:watch": "npm run test --watch"
   },
   "dependencies": {
-    "next": "12.1.5",
-    "next-pwa": "^5.5.2",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "next": "^13.1.2",
+    "next-pwa": "^5.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.16.7",
@@ -27,7 +27,7 @@
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5",
+    "eslint-config-next": "^13.1.2",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
