--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-boilerplate",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -34,10 +34,11 @@
     "eslint-plugin-react-hooks": "^4.5.0",
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^28.0.3",
+    "jest": "^29.3.1",
     "jest-environment-jsdom": "^28.0.2",
     "lint-staged": "^12.4.1",
     "prettier": "2.6.2",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.6.4"
   },
   "lint-staged": {
