--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "next": "^13.1.2",
     "next-pwa": "^5.6.0",
+    "next-seo": "^6.4.0",
     "nextjs-progressbar": "^0.0.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
